footer fix color contrast

--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -79,7 +79,8 @@ footer {
         }
 
         p {
-            color: $grayish-blue;
+            // color: $grayish-blue;
+            color: #C0C0C9;
             font-size: .9rem;
         }
     }
